--- a/facebookclone/pubspec.yaml
+++ b/facebookclone/pubspec.yaml
@@ -53,6 +53,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
+  
+  # App icon and splash screen
+  flutter_launcher_icons: ^0.14.1
+  flutter_native_splash: ^2.4.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -66,9 +70,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -95,3 +99,31 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+# Flutter Launcher Icons configuration
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icons/facebook_icon.png"
+  min_sdk_android: 21
+  web:
+    generate: true
+    image_path: "assets/icons/facebook_icon.png"
+    background_color: "#1877F2"
+    theme_color: "#1877F2"
+  windows:
+    generate: true
+    image_path: "assets/icons/facebook_icon.png"
+    icon_size: 48
+
+# Flutter Native Splash configuration
+flutter_native_splash:
+  color: "#1877F2"
+  image: assets/images/facebook_splash_logo.png
+  color_dark: "#1877F2"
+  image_dark: assets/images/facebook_splash_logo.png
+  android_12:
+    image: assets/images/facebook_splash_logo.png
+    color: "#1877F2"
+    icon_background_color: "#1877F2"
+  web: false
